--- a/index.html
+++ b/index.html
@@ -47,5 +47,11 @@
         (which is wedge-shaped like a crocodile’s), bat’s wings, and a long serpent’s tail. <br>
         They can have either lizard or avian legs.</p>
     <br>
+
+    <h2>Wyrm</h2>
+    <img width=350px src="img/Wyrm.jpg">
+    <p>A wyrm is a legendary creature that is often depicted as a wingless, legless dragon or serpent.</p>
+    <br>
+  
   </body>
 </html>
